# jp-stopword-filter

./: .gitignore  LICENSE  Makefile  README.md  README_ja.md  pyproject.toml
