[project]
name = "jp-stopword-filter"
version = "0.2.0"
description = "A lightweight Python library designed to filter stopwords for Japanese text."
authors = [
    {name = "BrambleXu", email = "liangxu006@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/BrambleXu/jp-stopword-filter"
Repository = "https://github.com/BrambleXu/jp-stopword-filter"
Documentation = "https://github.com/BrambleXu/jp-stopword-filter"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "codespell>=2.2.6",
]
